--- a/staticfiles/stylesheets/dashboard.scss
+++ b/staticfiles/stylesheets/dashboard.scss
@@ -15,7 +15,7 @@
 
 #sharetip {
     position: absolute;
-    z-index: 10000;
+    z-index: 9999;
     top: 0;
     left: 0;
     height: 100%;
